fix: Modifying heading gap and default padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1 {
-    margin-top: 25vh;
+    margin-top: 20vh;
 }
 
 .navbar {
@@ -21,7 +21,12 @@ h1 {
 .list {
     display: flex;
     justify-content: space-evenly;
-    padding: 2.5vw;
+    align-items: center;
+    height: 8vh;
+}
+
+nav.navbar ul {
+    padding: 0;
 }
 
 nav.navbar ul li {
